<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:text="@string/permissions_not_granted"
            android:id="@+id/permissions_not_granted"
            android:visibility="gone"
            android:textSize="16sp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/settings_layout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/telegram_bot_token" />
            <EditText
                android:id="@+id/telegramToken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textUri"
                android:importantForAutofill="no">
                <requestFocus />
            </EditText>
            <TextView
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/telegram_chat_id" />
            <EditText
                android:id="@+id/telegramChatID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:importantForAutofill="no">
            </EditText>
            <TextView
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/categories_of_notifications" />
            <CheckBox
                android:id="@+id/notifyCalls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify_calls" />
            <CheckBox
                android:id="@+id/notifySMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notify_sms"/>
            <Button
                android:id="@+id/saveSettings"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/save_settings"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>